Overlay controls now in place. Layout bug fixed by setting min-height on first cell. Plan cleaned up and TODO list added detailing the remaining sub tasks.

--- a/index.css
+++ b/index.css
@@ -5,10 +5,11 @@
     vertical-align: baseline;
     box-sizing: border-box;
     color: #EEE;
-    --TRANSITION_LENGTH: 2s;
-  }
+}
 body {
+    --TRANSITION_LENGTH: 2s;
     background-color: #333;
+    font-size: 62.5%;
 }
 ul{
     list-style-type: none;
@@ -22,22 +23,57 @@ ul{
 }
 .info_box{
     padding: 0.5em;
+    min-height: var(--img-size);
 }
-#carousel_container{
-  overflow: hidden;
-  width: var(--img-size);
-  height: var(--img-size);
-}
-#place_holder{
-    width: var(--img-size);
-    height: var(--img-size);
+#carousel{
+    min-height: var(--img-size);
 }
 #carousel_overlay{
+    width: var(--img-size);
+    height: var(--img-size);
     position: absolute;
-    font-size: 3vw;
-    background-size: cover;
+    font-size: calc(var(--img-size)*0.1);
     z-index:2;
+    display: grid;
+    grid-template-rows: 1fr 3fr 1fr;
 }
+#OL_top{
+    grid-column: 1 / 3;
+}
+#OL_bottom{
+    grid-column: 1 / 3;
+    justify-self: end;
+    align-self: end;
+}
+#OL_mid{
+    grid-column: 1 / 3;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    align-items: center;
+}
+#OL_right { justify-self: end; }
+.carousel_button{
+    height: calc(var(--img-size)*0.4);
+    width: calc(var(--img-size)*0.15);
+    margin: calc(var(--img-size)*0.02);
+    background: rgba(0,0,0,0.5);
+    border-radius: 10px;
+}
+#carousel_automatic{
+    background: rgba(0,0,0,0.5);
+    height: calc(var(--img-size)*0.15);
+    text-align: right;
+    margin: calc(var(--img-size)*0.02);
+    background: rgba(0,0,0,0.5);
+    border-radius: 10px;
+    padding-left: calc(var(--img-size)*0.02);
+    padding-right: calc(var(--img-size)*0.02);
+}
+.button_svg{
+    height: 50%;
+    width: 50%;
+}
+/* TODO, check if all these still neccessary */
 .carousel_image{
     position: absolute;
     max-width: var(--img-size);
@@ -58,7 +94,7 @@ ul{
  }
 @media (max-width: 1280px) {
     #flexbox_frame{ grid-template-columns: 1fr 1fr; }
-    * { --img-size: 50vw; }
+    * { --img-size: 49vw; }
 }
 @media (max-width: 700px) {
     #flexbox_frame{ grid-template-columns: 1fr; }
